delegates and events article

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
